--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -3,6 +3,9 @@ name: Terraform apply on merge to main
 on:
   push:
     branches: [ master ]
+    paths: 
+      - 'environments/**'
+      - 'modules/**'
 
 permissions:
   contents: read
