--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [ master ]
     types: [opened, synchronize, reopened]
+    paths: 
+      - 'environments/**'
+      - 'modules/**'
 
 permissions:
   contents: read
